@@ -1,3 +1,10 @@
+2009-10-05  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.Debugging.Client/ThreadInfo.cs:
+	* Mono.Debugging.Client/ProcessInfo.cs:
+	* Mono.Debugging.Client/DebuggerSession.cs: Use long for
+	  thread and process id.
+
 2009-10-02  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Don't show
